Calculate width for mobile to avoid horizontal scroll

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -73,7 +73,7 @@ h4 {
   }
 
   .text-content {
-    width: 100%;
+    width: calc(100% - 4rem);
     padding: 1rem 2rem;
     top: 10rem;
   }
